# cosmos-predict2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda.yaml  cosmos-predict2.yaml  justfile  pyproject.toml
assets/simple/: 1.txt  10.txt  3.txt  5.txt  6.txt  7.txt  8.txt  9.txt
assets/video2world_lvg/: example_prompt1.txt  prompt0.txt  prompt1.txt  prompt10.txt  prompt11.txt  prompt12.txt  prompt13.txt  prompt14.txt  prompt15.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  prompt6.txt  prompt7.txt  prompt8.txt  prompt9.txt
cosmos_predict2/: checkpointer.py  conditioner.py
cosmos_predict2/auxiliary/: qwen_text_encoder.py
cosmos_predict2/auxiliary/guardrail/blocklist/: blocklist.py
cosmos_predict2/auxiliary/guardrail/common/: core.py  presets.py
cosmos_predict2/auxiliary/guardrail/llamaGuard3/: llamaGuard3.py
cosmos_predict2/auxiliary/guardrail/video_content_safety_filter/: video_content_safety_filter.py  vision_encoder.py
cosmos_predict2/configs/: conditioner.py
cosmos_predict2/configs/action_conditioned/: config.py  config_action_conditioned.py
cosmos_predict2/configs/action_conditioned/defaults/: model.py
cosmos_predict2/configs/action_conditioned/experiment/: exp.py
cosmos_predict2/configs/base/: config_multiview.py  config_text2image.py  config_video2world.py
cosmos_predict2/configs/base/defaults/: data.py  model.py  optimizer.py
cosmos_predict2/configs/base/experiment/: _experiment_list.py  agibot_head_center_fisheye_color.py  cosmos_nemo_assets.py  cosmos_nemo_assets_lora.py  custom_data.py  groot.py  video2world_data.py
cosmos_predict2/configs/base/experiment/multiview/: waymo.py
cosmos_predict2/configs/camera_conditioned/: config.py
cosmos_predict2/data/: dataset_image.py  dataset_utils.py  dataset_video.py
cosmos_predict2/data/camera_conditioned/: camera_conditioned_dataset.py  dataset_utils.py
cosmos_predict2/datasets/: utils.py
cosmos_predict2/datasets/data_sources/: mock_data.py
cosmos_predict2/models/: multiview_model.py  text2image_dit.py  text2image_model.py  video2world_camera_dit.py  video2world_dit.py  video2world_model.py
cosmos_predict2/networks/: a2a_cp.py  attention.py
cosmos_predict2/pipelines/: multiview.py  text2image.py  video2video_sdedit.py  video2world.py  video2world_action.py  video2world_camera.py
cosmos_predict2/tests/: end2end_train.py
cosmos_predict2/text_encoders/: text_encoder.py
cosmos_predict2/tokenizers/: tokenizer.py  wan2pt1.py
cosmos_predict2/utils/: auto_deploy.py  misc.py
cosmos_predict2/vram_management/: layers.py
documentations/: inference_text2image.md  inference_text2world.md  inference_video2world.md  inference_video2world_camera.md  performance.md  post-training_multiview_waymo.md  post-training_text2image.md  post-training_text2image_cosmos_nemo_assets.md  post-training_video2world.md  post-training_video2world_action.md  post-training_video2world_agibot_fisheye.md  post-training_video2world_cosmos_nemo_assets.md  post-training_video2world_gr00t.md  post-training_video2world_lora.md  quantization.md  setup.md
examples/: action_video2world.py  multiview.py  text2image.py  text2world.py  video2video_sdedit.py  video2world.py  video2world_action.py  video2world_bestofn.py  video2world_camera.py  video2world_gr00t.py  video2world_lora.py  video2world_lvg.py
gradio/: readme.md  video2world_multigpu.py
imaginaire/: constants.py
imaginaire/auxiliary/: text_encoder.py
imaginaire/utils/: io.py
scripts/: _sync.sh  download_checkpoints.py  extract_images_from_videos.py  get_t5_embeddings.py  get_t5_embeddings_from_cosmos_nemo_assets.py  get_t5_embeddings_from_groot_dataset.py  prepare_agibot_fisheye_data.py  test_environment.py
