# [build-system]
# requires = ["setuptools>=61.0", "wheel", "torch>=2.1"]
# build-backend = "setuptools.build_meta"

[project]
name = "nvidia-cosmos"
version = "1.0.3"
authors = [{ name = "NVIDIA Corporation" }]
description = "Cosmos World Foundation Model"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
dependencies = [
    "attrs==25.1.0",
    "better-profanity==0.7.0",
    "boto3==1.35.99",
    "decord==0.6.0",
    "diffusers==0.33.1",
    "einops",
    "einops==0.8.1",
    "flash-attn>=2.1.1,<=2.6.3",                                 # transformer-engine requirement:https://github.com/NVIDIA/TransformerEngine/blob/e5edd6cc3d5a868bb3fe4e81088d22aab505a30d/transformer_engine/pytorch/attention.py#L118-L119
    "ftfy==6.3.1",
    "fvcore==0.1.5.post20221221",
    "huggingface-hub==0.32.4",
    "hydra-core==1.3.2",
    "imageio[pyav,ffmpeg]==2.37.0",
    "iopath==0.1.10",
    "ipdb==0.13.13",
    "loguru==0.7.2",
    "mediapy==1.2.2",
    "megatron-core==0.10.0",
    "modelscope==1.26.0",
    "natten; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nltk==3.9.1",
    "numpy",
    "numpy==1.26.4",
    "nvidia-cuda-runtime-cu12>=12.6",                            # Minimum version for cxx11 ABI
    "nvidia-ml-py==12.535.133",
    "omegaconf==2.3.0",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "peft==0.14.0",
    "pillow==11.1.0",
    "protobuf==4.25.3",
    "pycocotools==2.0.10",
    "pynvml==12.0.0",
    "pyyaml==6.0.2",
    "qwen-vl-utils[decord]==0.0.11",
    "retinaface-py==0.0.2",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "sentencepiece==0.2.0",
    "termcolor==2.5.0",
    "torch>=2.6",                                                       # Minimum version for cxx11 ABI
    "torchvision",
    "tqdm==4.66.5",
    "transformer-engine-cu12==1.13.0",
    "transformer-engine==1.13.0",
    "transformers==4.51.3",
    "webdataset==0.2.111",
]

[project.optional-dependencies]
compile = ["transformer-engine-torch==1.13.0"]

[dependency-groups]
# This can be removed once transformer-engine>=2.6
# Copied from https://github.com/NVIDIA/TransformerEngine/blob/main/pyproject.toml
transformer_engine_build = [
    "setuptools>=61.0",
    "cmake>=3.21",
    "wheel",
    "pybind11[global]",
    "ninja",
    "pip",
    "torch>=2.1",
    "jax[cuda12]",
    "flax>=0.7.1",
]

[tool.uv]
no-build-isolation-package = [
    "flash-attn",
    "natten",
    "transformer-engine-torch",
]

[tool.uv.sources]
# Manually specify wheels to avoid compiling source packages
# Also, we need to ensure they have cxx11 ABI
# flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
natten = { url = "https://github.com/SHI-Labs/NATTEN/releases/download/v0.20.1/natten-0.20.1%2Btorch270cu126-cp312-cp312-linux_x86_64.whl" }

[project.urls]
homepage = "https://github.com/nvidia-cosmos/cosmos-predict2/"
issues = "https://github.com/nvidia-cosmos/cosmos-predict2/issues"

[tool.isort]
profile = "black"
known_third_party = ["third_party"]
skip = ["third_party"]
line_length = 120

[tool.black]
line-length = 120
exclude = 'third_party'

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
omit = [
    "tests/*",
    "legacy/*",
    ".venv/*",
    "**/test_*.py",
    "config.py",
    "config-3.10.py",
]
